--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <body>
       <div id="root"></div>
       <script type="module" src="/src/main.tsx"></script>
+
+      <!-- Hidden form for Netlify Forms detection -->
+      <form name="customer-support" netlify netlify-honeypot="bot-field" hidden>
+        <input type="text" name="full_name" />
+        <input type="email" name="email" />
+        <input type="tel" name="phone" />
+        <textarea name="enquiry"></textarea>
+      </form>
     </body>
   </html>
   
